# mirror-health

./: .gitignore  README.md  pyproject.toml
.github/workflows/: active_check.yml  discovery.yml  inactive_check.yml  init.yml  smoke_test.yml  tests.yml  validate_config.yml
config/: known_domains.json  scoring.json  scrapers.json  seed_mirrors.json  tlds.json
data/: mirror_scores.json  mirror_state.json
src/: discovery.py  main.py  models.py  scoring.py  state.py  tiers.py  utils.py
src/checks/: basic.py  full.py
tests/: conftest.py  test_checks.py  test_discovery.py  test_models.py  test_orchestrator.py  test_scoring.py  test_state.py  test_tiers.py
tests/fixtures/: 1337x_placeholder.html  1337x_valid.html  annas_archive_valid.html  cloudflare_challenge.html  eztv_valid.html  rutracker_valid.html  torrentgalaxy_valid.html  tpb_valid.html  yts_invalid.json  yts_valid.json
