[project]
name = "mirror-health"
version = "0.1.0"
description = "GitHub Actions service that validates torrent indexer site mirrors and publishes scored, tiered results"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "httpx[http2]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
